got rid of kitten

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <source media="(max-width: 1023px)" srcset="http://placehold.it/512x512">
                 <source media="(min-width: 1024px)" srcset="http://placehold.it/340x340">
                 <source src="http://placehold.it/600x600">
-                <img src="http://placekitten.com/g/200/300 " alt="This picture loads on non-supporting browsers." />
+                <img src="http://placehold.it/600x600 " alt="This picture loads on non-supporting browsers." />
                 
             </picture>   
         </li>
