--- a/index.html
+++ b/index.html
@@ -12,137 +12,136 @@
 <div class="wrapper">
     <ul>
         <li>
-            <picture id="pic1">
-                <source media="(max-width: 400px)" srcset="http://placehold.it/400x400">
-                <source media="(max-width: 600px)" srcset="http://placehold.it/600x600">
-                <source media="(max-width: 800px)" srcset="http://placehold.it/400x400">
-                <source media="(max-width: 1023px)" srcset="http://placehold.it/512x512">
-                <source media="(min-width: 1024px)" srcset="http://placehold.it/340x340">
-                <source src="http://placehold.it/600x600">
-                <img src="http://placehold.it/600x600 " alt="This picture loads on non-supporting browsers." />
-                
+            <picture>
+                <source media="(max-width: 400px)" srcset="img/keys400.png">
+                <source media="(max-width: 600px)" srcset="img/keys600.png">
+                <source media="(max-width: 800px)" srcset="img/keys400.png">
+                <source media="(max-width: 1023px)" srcset="img/keys512.png">
+                <source media="(min-width: 1024px)" srcset="img/keys340.png">
+                <source src="img/keys600.png">
+                <img src="img/keys600.png " alt="This picture loads on non-supporting browsers." />
             </picture>   
         </li>
         <li>
-            <picture id="pic2">
-                <source media="(max-width: 400px)" srcset="http://placehold.it/400x400">
-                <source media="(max-width: 600px)" srcset="http://placehold.it/600x600">
-                <source media="(max-width: 800px)" srcset="http://placehold.it/400x400">
-                <source media="(max-width: 1023px)" srcset="http://placehold.it/512x512">
-                <source media="(min-width: 1024px)" srcset="http://placehold.it/340x340">
-                <source src="http://placehold.it/600x600">
-                <img src="http://placehold.it/600x600" alt="This picture loads on non-supporting browsers.">
+            <picture>
+                <source media="(max-width: 400px)" srcset="img/keys400.png">
+                <source media="(max-width: 600px)" srcset="img/keys600.png">
+                <source media="(max-width: 800px)" srcset="img/keys400.png">
+                <source media="(max-width: 1023px)" srcset="img/keys512.png">
+                <source media="(min-width: 1024px)" srcset="img/keys340.png">
+                <source src="img/keys600.png">
+                <img src="img/keys600.png " alt="This picture loads on non-supporting browsers." />
+            </picture>  
+        </li>
+        <li>
+            <picture>
+                <source media="(max-width: 400px)" srcset="img/keys400.png">
+                <source media="(max-width: 600px)" srcset="img/keys600.png">
+                <source media="(max-width: 800px)" srcset="img/keys400.png">
+                <source media="(max-width: 1023px)" srcset="img/keys512.png">
+                <source media="(min-width: 1024px)" srcset="img/keys340.png">
+                <source src="img/keys600.png">
+                <img src="img/keys600.png " alt="This picture loads on non-supporting browsers." />
             </picture>   
         </li>
         <li>
-            <picture id="pic3">
-                <source media="(max-width: 400px)" srcset="http://placehold.it/400x400">
-                <source media="(max-width: 600px)" srcset="http://placehold.it/600x600">
-                <source media="(max-width: 800px)" srcset="http://placehold.it/400x400">
-                <source media="(max-width: 1023px)" srcset="http://placehold.it/512x512">
-                <source media="(min-width: 1024px)" srcset="http://placehold.it/340x340">
-                <source src="http://placehold.it/600x600">
-                <img src="http://placehold.it/600x600" alt="This picture loads on non-supporting browsers.">
+            <picture>
+                <source media="(max-width: 400px)" srcset="img/keys400.png">
+                <source media="(max-width: 600px)" srcset="img/keys600.png">
+                <source media="(max-width: 800px)" srcset="img/keys400.png">
+                <source media="(max-width: 1023px)" srcset="img/keys512.png">
+                <source media="(min-width: 1024px)" srcset="img/keys340.png">
+                <source src="img/keys600.png">
+                <img src="img/keys600.png " alt="This picture loads on non-supporting browsers." />
+            </picture>    
+        </li>
+        <li>
+            <picture>
+                <source media="(max-width: 400px)" srcset="img/keys400.png">
+                <source media="(max-width: 600px)" srcset="img/keys600.png">
+                <source media="(max-width: 800px)" srcset="img/keys400.png">
+                <source media="(max-width: 1023px)" srcset="img/keys512.png">
+                <source media="(min-width: 1024px)" srcset="img/keys340.png">
+                <source src="img/keys600.png">
+                <img src="img/keys600.png " alt="This picture loads on non-supporting browsers." />
+            </picture>  
+        </li>
+        <li>
+            <picture>
+                <source media="(max-width: 400px)" srcset="img/keys400.png">
+                <source media="(max-width: 600px)" srcset="img/keys600.png">
+                <source media="(max-width: 800px)" srcset="img/keys400.png">
+                <source media="(max-width: 1023px)" srcset="img/keys512.png">
+                <source media="(min-width: 1024px)" srcset="img/keys340.png">
+                <source src="img/keys600.png">
+                <img src="img/keys600.png " alt="This picture loads on non-supporting browsers." />
             </picture>   
         </li>
         <li>
-            <picture id="pic4">
-                <source media="(max-width: 400px)" srcset="http://placehold.it/400x400">
-                <source media="(max-width: 600px)" srcset="http://placehold.it/600x600">
-                <source media="(max-width: 800px)" srcset="http://placehold.it/400x400">
-                <source media="(max-width: 1023px)" srcset="http://placehold.it/512x512">
-                <source media="(min-width: 1024px)" srcset="http://placehold.it/340x340">
-                <source src="http://placehold.it/600x600">
-                <img src="http://placehold.it/600x600" alt="This picture loads on non-supporting browsers.">
+            <picture>
+                <source media="(max-width: 400px)" srcset="img/keys400.png">
+                <source media="(max-width: 600px)" srcset="img/keys600.png">
+                <source media="(max-width: 800px)" srcset="img/keys400.png">
+                <source media="(max-width: 1023px)" srcset="img/keys512.png">
+                <source media="(min-width: 1024px)" srcset="img/keys340.png">
+                <source src="img/keys600.png">
+                <img src="img/keys600.png " alt="This picture loads on non-supporting browsers." />
+            </picture>  
+        </li>
+        <li>
+            <picture>
+                <source media="(max-width: 400px)" srcset="img/keys400.png">
+                <source media="(max-width: 600px)" srcset="img/keys600.png">
+                <source media="(max-width: 800px)" srcset="img/keys400.png">
+                <source media="(max-width: 1023px)" srcset="img/keys512.png">
+                <source media="(min-width: 1024px)" srcset="img/keys340.png">
+                <source src="img/keys600.png">
+                <img src="img/keys600.png " alt="This picture loads on non-supporting browsers." />
+            </picture>  
+        </li>
+        <li>
+            <picture>
+                <source media="(max-width: 400px)" srcset="img/keys400.png">
+                <source media="(max-width: 600px)" srcset="img/keys600.png">
+                <source media="(max-width: 800px)" srcset="img/keys400.png">
+                <source media="(max-width: 1023px)" srcset="img/keys512.png">
+                <source media="(min-width: 1024px)" srcset="img/keys340.png">
+                <source src="img/keys600.png">
+                <img src="img/keys600.png " alt="This picture loads on non-supporting browsers." />
+            </picture>  
+        </li>
+        <li>
+            <picture>
+                <source media="(max-width: 400px)" srcset="img/keys400.png">
+                <source media="(max-width: 600px)" srcset="img/keys600.png">
+                <source media="(max-width: 800px)" srcset="img/keys400.png">
+                <source media="(max-width: 1023px)" srcset="img/keys512.png">
+                <source media="(min-width: 1024px)" srcset="img/keys340.png">
+                <source src="img/keys600.png">
+                <img src="img/keys600.png " alt="This picture loads on non-supporting browsers." />
             </picture>   
         </li>
         <li>
-            <picture id="pic5">
-                <source media="(max-width: 400px)" srcset="http://placehold.it/400x400">
-                <source media="(max-width: 600px)" srcset="http://placehold.it/600x600">
-                <source media="(max-width: 800px)" srcset="http://placehold.it/400x400">
-                <source media="(max-width: 1023px)" srcset="http://placehold.it/512x512">
-                <source media="(min-width: 1024px)" srcset="http://placehold.it/340x340">
-                <source src="http://placehold.it/600x600">
-                <img src="http://placehold.it/600x600" alt="This picture loads on non-supporting browsers.">
-            </picture>   
+           <picture>
+                <source media="(max-width: 400px)" srcset="img/keys400.png">
+                <source media="(max-width: 600px)" srcset="img/keys600.png">
+                <source media="(max-width: 800px)" srcset="img/keys400.png">
+                <source media="(max-width: 1023px)" srcset="img/keys512.png">
+                <source media="(min-width: 1024px)" srcset="img/keys340.png">
+                <source src="img/keys600.png">
+                <img src="img/keys600.png " alt="This picture loads on non-supporting browsers." />
+            </picture>  
         </li>
         <li>
-            <picture id="pic6">
-                <source media="(max-width: 400px)" srcset="http://placehold.it/400x400">
-                <source media="(max-width: 600px)" srcset="http://placehold.it/600x600">
-                <source media="(max-width: 800px)" srcset="http://placehold.it/400x400">
-                <source media="(max-width: 1023px)" srcset="http://placehold.it/512x512">
-                <source media="(min-width: 1024px)" srcset="http://placehold.it/340x340">
-                <source src="http://placehold.it/600x600">
-                <img src="http://placehold.it/600x600" alt="This picture loads on non-supporting browsers.">
-            </picture>   
-        </li>
-        <li>
-            <picture id="pic7">
-                <source media="(max-width: 400px)" srcset="http://placehold.it/400x400">
-                <source media="(max-width: 600px)" srcset="http://placehold.it/600x600">
-                <source media="(max-width: 800px)" srcset="http://placehold.it/400x400">
-                <source media="(max-width: 1023px)" srcset="http://placehold.it/512x512">
-                <source media="(min-width: 1024px)" srcset="http://placehold.it/340x340">
-                <source src="http://placehold.it/600x600">
-                <img src="http://placehold.it/600x600" alt="This picture loads on non-supporting browsers.">
-            </picture>   
-        </li>
-        <li>
-            <picture id="pic8">
-                <source media="(max-width: 400px)" srcset="http://placehold.it/400x400">
-                <source media="(max-width: 600px)" srcset="http://placehold.it/600x600">
-                <source media="(max-width: 800px)" srcset="http://placehold.it/400x400">
-                <source media="(max-width: 1023px)" srcset="http://placehold.it/512x512">
-                <source media="(min-width: 1024px)" srcset="http://placehold.it/340x340">
-                <source src="http://placehold.it/600x600">
-                <img src="http://placehold.it/600x600" alt="This picture loads on non-supporting browsers.">
-            </picture>   
-        </li>
-        <li>
-            <picture id="pic9">
-                <source media="(max-width: 400px)" srcset="http://placehold.it/400x400">
-                <source media="(max-width: 600px)" srcset="http://placehold.it/600x600">
-                <source media="(max-width: 800px)" srcset="http://placehold.it/400x400">
-                <source media="(max-width: 1023px)" srcset="http://placehold.it/512x512">
-                <source media="(min-width: 1024px)" srcset="http://placehold.it/340x340">
-                <source src="http://placehold.it/600x600">
-                <img src="http://placehold.it/600x600" alt="This picture loads on non-supporting browsers.">
-            </picture>   
-        </li>
-        <li>
-            <picture id="pic10">
-                <source media="(max-width: 400px)" srcset="http://placehold.it/400x400">
-                <source media="(max-width: 600px)" srcset="http://placehold.it/600x600">
-                <source media="(max-width: 800px)" srcset="http://placehold.it/400x400">
-                <source media="(max-width: 1023px)" srcset="http://placehold.it/512x512">
-                <source media="(min-width: 1024px)" srcset="http://placehold.it/340x340">
-                <source src="http://placehold.it/600x600">
-                <img src="http://placehold.it/600x600" alt="This picture loads on non-supporting browsers.">
-            </picture>   
-        </li>
-        <li>
-            <picture id="pic11">
-                <source media="(max-width: 400px)" srcset="http://placehold.it/400x400">
-                <source media="(max-width: 600px)" srcset="http://placehold.it/600x600">
-                <source media="(max-width: 800px)" srcset="http://placehold.it/400x400">
-                <source media="(max-width: 1023px)" srcset="http://placehold.it/512x512">
-                <source media="(min-width: 1024px)" srcset="http://placehold.it/340x340">
-                <source src="http://placehold.it/600x600">
-                <img src="http://placehold.it/600x600" alt="This picture loads on non-supporting browsers.">
-            </picture>   
-        </li>
-        <li>
-            <picture id="pic12">
-                <source media="(max-width: 400px)" srcset="http://placehold.it/400x400">
-                <source media="(max-width: 600px)" srcset="http://placehold.it/600x600">
-                <source media="(max-width: 800px)" srcset="http://placehold.it/400x400">
-                <source media="(max-width: 1023px)" srcset="http://placehold.it/512x512">
-                <source media="(min-width: 1024px)" srcset="http://placehold.it/340x340">
-                <source src="http://placehold.it/600x600">
-                <img src="http://placehold.it/600x600" alt="This picture loads on non-supporting browsers.">
-            </picture>   
+            <picture>
+                <source media="(max-width: 400px)" srcset="img/keys400.png">
+                <source media="(max-width: 600px)" srcset="img/keys600.png">
+                <source media="(max-width: 800px)" srcset="img/keys400.png">
+                <source media="(max-width: 1023px)" srcset="img/keys512.png">
+                <source media="(min-width: 1024px)" srcset="img/keys340.png">
+                <source src="img/keys600.png">
+                <img src="img/keys600.png " alt="This picture loads on non-supporting browsers." />
+            </picture>  
         </li>
 </ul>   
     
